# MEngine

./: .gitignore  CMakeLists.txt  MEgine.sln  MEngine.sln  README.md
MEgine/: Helpers.h  MEgine.vcxproj  MEgine.vcxproj.filters  main.cpp
MEgine/src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  (+7 more)
MEngine/: CMakeLists.txt  MEngine.vcxproj  MEngine.vcxproj.filters  imgui.ini  main.cpp
MEngine/res/shader/: Basic.Shader
MEngine/src/: Helpers.cpp  Helpers.h  IndexBuffer.h  MEgine.h  MEngine.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
MEngine/src/Elements/: Rect.cpp  Rect.h
MEngine/src/MEngine/: Application.cpp  Application.h  Core.h  Input.cpp  Input.h  Layer.cpp  Layer.h  Object.cpp  Object.h  Vertex.h
MEngine/src/MEngine/Components/: IComponent.cpp  IComponent.h  InputComponent.cpp  InputComponent.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp  TransformComponent.h
MEngine/src/MEngine/Event/: Event.cpp  Event.h  Eventhandler.cpp  Eventhanlder.h
MEngine/src/MEngine/Mesh/: MeshGenerator.cpp  MeshGenerator.h
MEngine/src/OpenGl/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
MEngine/src/OpenGl/Shaders/: Shaders.cpp  Shaders.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  main.cpp
Sandbox/res/shader/: Basic.Shader
(+6 files in other folders)
